# lazi

./: .gitignore  README.md  pyproject.toml  readme.md
lazi/: auto.py  lazi.py
lazi/conf/: all.py  auto.py  base.py  conf.py  envs.py  lazy.py  test.py
lazi/core/: __init__.py  finder.py  loader.py  module.py  record.py  spec.py  stat.py  util.py
lazi/core/hook/: finder.py  loader.py  module.py
lazi/lazo/: __init__.py
lazi/util/: __init__.py  debug.py  functional.py  util.py
tests/: _lazi.py  conftest.py  test_array.py  test_asyncio.py  test_django.py  test_importlib.py  test_lazi.py  test_lazy.py  test_pandas.py  test_pygments.py  test_record.py  test_requests.py  test_rich.py  test_standalone.py  test_stat.py
tests/standalone/: sa_array.py  sa_nested.py  sa_pandas.py  sa_presto.py  sa_pygments.py
tests/test_django/: test_django.py  test_django_manage.py
tests/test_django/web/: apps.py  settings.py  urls.py  wsgi.py
