[tool.poetry]
name = "lazi"
version = "1.6.69"
description = "A lightweight and extensible way to implement lazy imports globally."
authors = ["Phillip Sitbon <phillip.sitbon@gmail.com>"]
readme = "README.md"
license = "AGPLv3"
repository = "https://github.com/sitbon/lazi"
classifiers= [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
]

packages = [
    { include = "lazi" }
]

include = [
    { path = "tests", format = "sdist" }
]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
django = "^4"
requests = "^2"
toolz = "^0"
rich = "^13"
setuptools = "^67"
pandas = "^2"
pytest = "^7"
wagtail = "^5.0"
presto-requests = "^1.3.6"

[tool.poetry.group.direct]
optional = true
[tool.poetry.group.direct.dependencies]
presto-requests = {git = "https://github.com/sitbon/presto"}


[tool.pytest.ini_options]
addopts = "-v --no-header -rA"
cache_dir = ".cache/pytest"
testpaths = [
    "tests",
]
markers = [
    "test_test",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
