[tool.poetry]
name = "lazi"
version = "1.9.156"
description = "A lightweight and extensible way to implement lazy imports globally."
authors = ["Phillip Sitbon <phillip.sitbon@gmail.com>"]
readme = "readme.md"
license = "AGPLv3"
repository = "https://github.com/sitbon/lazi"
classifiers= [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
]

packages = [
    { include = "lazi" }
]

include = [
    { path = "tests", format = "sdist" }
]

[tool.poe.tasks]

git_commit_num.cmd = "git rev-list --count HEAD"
git_commit_sha.cmd = "git show --pretty=format:'%H' --no-patch"
pkg_version.cmd = "poetry version -s"

commit-info.sequence = [
    { ref = "pkg_version" },
    { ref = "git_commit_num" },
    { ref = "git_commit_sha" },
]

build.sequence = [
    { ref = "commit-info" },
    { cmd = "poetry build" },
    { shell = "sha512sum dist/lazi-$(poetry version -s).tar.gz" },
]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
django = "^4"
requests = "^2"
toolz = "^0"
rich = "^13"
setuptools = "^67"
pandas = "^2"
pytest = "^7"
wagtail = "^5.0"
presto-requests = "^1.3.6"
poethepoet = "^0.20.0"

[tool.poetry.group.direct]
optional = true
[tool.poetry.group.direct.dependencies]
presto-requests = {git = "https://github.com/sitbon/presto"}


[tool.pytest.ini_options]
addopts = "-v --no-header -rA"
cache_dir = ".cache/pytest"
# log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(message)s"
log_format = "%(message)s"
testpaths = [
    "tests",
]
markers = [
    "test_test",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
